--- a/2주차/MeasuresOfCentralTendency_유경민.ipynb
+++ b/2주차/MeasuresOfCentralTendency_유경민.ipynb
@@ -22,8 +22,8 @@
         "id": "DR3t_qfJsSnf"
       },
       "source": [
-        "# Measures of central tendency (중심치의 측정)\n",
-        "<br>> 중심치의 측정은 전체적인 평균이나 데이터 셋의 평균 값을 설명하는 경향이 있다. 전체 데이터 셋의 최적의 요약을 제공하기 위한 것으로 기대된다.\n",
+        "# Measures of central tendency (중심경향도)\n",
+        "<br>> 중심경향도은 전체적인 평균이나 데이터 셋의 평균 값을 설명하기 위한 것\n",
         "\n",
         "*   mean(샘플값의 평균)\n",
         "*   median(중간)\n",
